LAUN-17 LAUN-10: Dokumenterer getdown.txt samt forbedrer eksempel-oppsett og bruk